{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 1163,
  "lineage": "513a14d2-3ae8-9f45-3903-c6e99d793fbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0730b30910a034d89",
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:elastic-ip/eipalloc-0730b30910a034d89",
            "domain": "vpc",
            "id": "eipalloc-0730b30910a034d89",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-196-243.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.196.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rag-llamaindex-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-eip",
              "Project": "rag-llamaindex"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f124da98ef4ce032",
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:instance/i-00218daed5ac1a413",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00218daed5ac1a413",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.200000",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "g5g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "rag-llamaindex-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06143ddf1ddee82b5",
            "private_dns": "ip-10-0-1-79.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-13-125-103-248.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.103.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:346299179356:key/8b6fee86-5871-4042-b762-f558e900ee89",
                "tags_all": {
                  "Environment": "prod",
                  "Project": "rag-llamaindex"
                },
                "throughput": 125,
                "volume_id": "vol-0a30a1913a69bd7a4",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-dccqg6ch",
            "subnet_id": "subnet-07144024131c1a973",
            "tags": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server",
              "Project": "rag-llamaindex"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0790da7f7fc5bcf9e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.rag_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.dlami_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:internet-gateway/igw-0826731df74e1ff7b",
            "id": "igw-0826731df74e1ff7b",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-igw",
              "Project": "rag-llamaindex"
            },
            "vpc_id": "vpc-08acb980aacaf736a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:route-table/rtb-065f2c0c9093701ed",
            "id": "rtb-065f2c0c9093701ed",
            "owner_id": "346299179356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0826731df74e1ff7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rag-llamaindex-rt-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-rt-public",
              "Project": "rag-llamaindex"
            },
            "timeouts": null,
            "vpc_id": "vpc-08acb980aacaf736a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003f33c81d9d78a43",
            "route_table_id": "rtb-065f2c0c9093701ed",
            "subnet_id": "subnet-07144024131c1a973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rag_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:security-group/sg-0790da7f7fc5bcf9e",
            "description": "Security group for RAG LlamaIndex API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0790da7f7fc5bcf9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Alt",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ollama",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RAG API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rag-llamaindex-sg",
            "name_prefix": "",
            "owner_id": "346299179356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rag-llamaindex-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-sg",
              "Project": "rag-llamaindex"
            },
            "timeouts": null,
            "vpc_id": "vpc-08acb980aacaf736a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:subnet/subnet-07144024131c1a973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07144024131c1a973",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346299179356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rag-llamaindex-subnet-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-subnet-public",
              "Project": "rag-llamaindex"
            },
            "vpc_id": "vpc-08acb980aacaf736a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:vpc/vpc-08acb980aacaf736a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029869d51309b9091",
            "default_route_table_id": "rtb-08f1353d65a815328",
            "default_security_group_id": "sg-09a9317615fffed7c",
            "dhcp_options_id": "dopt-0f709d810ea565631",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08acb980aacaf736a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f1353d65a815328",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-vpc",
              "Project": "rag-llamaindex"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}